@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix bug in Facets for TodoDiag
+
 1.302091  2017-08-08 19:50:55-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Add 'new_root' constructor for formatters
